[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }

[dependencies.axum]
version = "0.6"
default-features = false
features = ["headers", "tokio", "query"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio-rustls", "macros", "any", "postgres"]
